# ModelRack

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-a-model.md  adding-a-type.md  config-schema.md  writing-a-server.md
examples/app/: model_overrides.yaml
examples/models/: README.md  registry.yaml
examples/models/chatterbox/: config.yaml  requirements.txt  server.py
examples/models/echo/: config.yaml  server.py
examples/models/qwen-image/: config.yaml  requirements.txt  server.py
examples/models/qwen-image-edit/: config.yaml  requirements.txt  server.py
examples/models/qwen-image-edit/weights/: .gitkeep
examples/models/qwen-image/weights/: .gitkeep
examples/models/qwen2.5-vl/: config.yaml  requirements.txt  server.py
examples/models/qwen2.5-vl/weights/: .gitkeep
examples/models/qwen3-coder/: config.yaml  requirements.txt  server.py
examples/models/qwen3-coder/weights/: .gitkeep
examples/models/qwen3-omni/: config.yaml  requirements.txt  server.py
examples/models/qwen3-omni/weights/: .gitkeep
examples/models/qwen3-tts/: config.yaml  requirements.txt  server.py
examples/models/qwen3-tts/weights/: .gitkeep
examples/models/qwen3.6/: config.yaml  requirements.txt  server.py
examples/models/qwen3.6/weights/: .gitkeep
examples/models/wan-2.2-i2v/: config.yaml  requirements.txt  server.py
examples/models/wan-2.2-i2v/weights/: .gitkeep
examples/models/z-image-turbo/: config.yaml  requirements.txt  server.py
examples/models/z-image-turbo/weights/: .gitkeep
src/modelrack/: __init__.py  config.py  exceptions.py  inference_client.py  process_manager.py  registry.py  resolver.py  validator.py  watcher.py
src/modelrack/api/: __init__.py  deps.py  server.py
src/modelrack/api/routes/: infer.py  models.py  processes.py  system.py
src/modelrack/cli/: __init__.py  main.py
src/modelrack/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  registry.py
src/modelrack/schemas/: __init__.py  model_types.py  resolved_model.py  server_process.py  validation.py
src/modelrack/templates/: __init__.py
src/modelrack/templates/requirements/: code.txt  image_edit.txt  image_generation.txt  language.txt  omni.txt  tts.txt  video_generation.txt  vision_language.txt
src/modelrack/templates/servers/: __init__.py  server_diffusers_image.py  server_diffusers_image_edit.py  server_diffusers_video.py  server_omni.py  server_transformers_vlm.py  server_tts.py  server_vllm_llm.py
src/modelrack/utils/: __init__.py  merge.py  paths.py  ports.py  procstate.py
tests/: conftest.py  test_api.py  test_deep_merge.py  test_inference_client.py  test_process_manager.py  test_providers.py  test_registry.py  test_resolver.py  test_shared_venv.py  test_validator.py
